--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@biomejs/biome": "1.9.4",
+    "@formspree/react": "^2.5.1",
     "autoprefixer": "^10.4.20",
     "gatsby": "^5.13.7",
     "gatsby-plugin-image": "^3.13.1",
