--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "description": "luc-dev.com",
   "author": "lukasz",
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "scripts": {
     "develop": "gatsby clean && gatsby develop",
     "start": "gatsby develop",
@@ -20,6 +22,8 @@
   "dependencies": {
     "@biomejs/biome": "1.9.4",
     "@formspree/react": "^2.5.1",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "autoprefixer": "^10.4.20",
     "gatsby": "^5.14.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -34,7 +38,8 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
