--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
+    "gatsby-plugin-react-i18next": "^3.0.1",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-source-contentful": "^8.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "i18next": "^24.2.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "tailwindcss": "^3.4.14",
     "three": "^0.170.0"
   },
