--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "description": "luc-dev.com",
   "author": "lukasz",
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "scripts": {
     "develop": "gatsby clean && gatsby develop",
     "start": "gatsby develop",
@@ -36,11 +34,11 @@
     "gatsby-source-contentful": "^8.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
-    "i18next": "^24.2.0",
+    "i18next": "22.5.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.4.0",
+    "react-i18next": "^12.0.0",
     "tailwindcss": "^3.4.14",
     "three": "^0.170.0"
   },
